--- a/tmux.conf
+++ b/tmux.conf
@@ -32,3 +32,14 @@ set -g default-terminal "screen-256color"
 set -g base-index 1
 # Set the base index for panes to 1 instead of 0
 setw -g pane-base-index 1
+
+# hide status bar
+set -g status off
+
+# Setup 'v' to begin selection as in Vim
+bind-key -t vi-copy v begin-selection
+bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+
+# Update default binding of `Enter` to also use copy-pipe
+unbind -t vi-copy Enter
+bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
