--- a/tmux.conf
+++ b/tmux.conf
@@ -1,45 +1,32 @@
-# Setting the prefix from C-b to C-a
-set -g prefix C-a
+# Prefix
+set -g prefix C-Space
+unbind C-b           # Free the original prefix keybinding
+set -s escape-time 0 # don't wait for escape
 
-# Free the original Ctrl-b prefix keybinding
-unbind C-b
+bind-key C-Space last-window
 
-#setting the delay between prefix and command
-set -s escape-time 1
+# Colors
+set -g terminal-overrides ',xterm-256color:Tc'
 
-# Ensure that we can send Ctrl-A to other apps
-bind C-a send-prefix
-
-# Reload the file with Prefix r
-bind r source-file ~/.tmux.conf \; display "Reloaded!"
-
-bind | split-window -h
-bind - split-window -v
-
+# Movement
+setw -g mode-keys vi # enable vi keys.
 # moving between panes
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
+# vi selection
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 
-# enable vi keys.
-setw -g mode-keys vi
-
-# Set the default terminal mode to 256color mode
+# Display
 set -g default-terminal "screen-256color"
+set -g base-index 1         # Start window indexing at one instead of zero
+setw -g pane-base-index 1   # Set the base index for panes to 1 instead of 0
+set -g status off           # hide status bar
+source-file ~/.tmux-airline # custom theme
 
-# Start window indexing at one instead of zero
-set -g base-index 1
-# Set the base index for panes to 1 instead of 0
-setw -g pane-base-index 1
+# Reload the file with Prefix r
+bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
-# hide status bar
-set -g status off
-
-# Setup 'v' to begin selection as in Vim
-bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
-
-# Update default binding of `Enter` to also use copy-pipe
-unbind -t vi-copy Enter
-bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
