--- a/tmux.conf
+++ b/tmux.conf
@@ -2,31 +2,35 @@
 set -g prefix C-Space
 unbind C-b           # Free the original prefix keybinding
 set -s escape-time 0 # don't wait for escape
-
 bind-key C-Space last-window
 
-# Colors
-set -g terminal-overrides ',xterm-256color:Tc'
 
-# Movement
+# Vi
 setw -g mode-keys vi # enable vi keys.
-# moving between panes
+## movement
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
-# vi selection
-bind-key -T copy-mode-vi v send-keys -X begin-selection
-bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+## selection
+bind-key -T copy-mode-vi v   send-keys -X begin-selection
+bind-key -T copy-mode-vi y   send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
+
 
 # Display
 set -g default-terminal "screen-256color"
+set -g terminal-overrides ',xterm-256color:Tc' # True Color
+set -g status off           # hide status bar
 set -g base-index 1         # Start window indexing at one instead of zero
 setw -g pane-base-index 1   # Set the base index for panes to 1 instead of 0
-set -g status off           # hide status bar
 source-file ~/.tmux-airline # custom theme
 
-# Reload the file with Prefix r
-bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
+# Reload the file with Prefix r
+bind r source-file ~/.tmux.conf \; display "Reloaded Tmux."
+
+# Hacks
+# reattach is necessary on OSX because apple is stupid
+# https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard/issues/53
+set-option -g default-command "reattach-to-user-namespace -l bash"
