--- a/tmux.conf
+++ b/tmux.conf
@@ -19,8 +19,7 @@ bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 
 
 # Display
-set -g default-terminal "screen-256color"
-set -g terminal-overrides ',xterm-256color:Tc' # True Color
+set -g default-terminal 'xterm-256color-italic'
 set -g status off           # hide status bar
 set -g base-index 1         # Start window indexing at one instead of zero
 setw -g pane-base-index 1   # Set the base index for panes to 1 instead of 0
