Misc changes and refactoring

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,8 +1,9 @@
 # Prefix
-set -g prefix C-Space
+set -g prefix C-a
 unbind C-b           # Free the original prefix keybinding
 set -s escape-time 0 # don't wait for escape
 bind-key C-Space last-window
+bind-key C-a send-prefix
 
 
 # Vi
