--- a/tmux.conf
+++ b/tmux.conf
@@ -5,6 +5,8 @@ set -s escape-time 0 # don't wait for escape
 bind-key C-Space last-window
 bind-key C-a send-prefix
 
+# renumber after deleting
+set-option -g renumber-windows on
 
 # Vi
 setw -g mode-keys vi # enable vi keys.
