Vim file encoding and Tmux mouse scrolling

--- a/tmux.conf
+++ b/tmux.conf
@@ -8,6 +8,9 @@ bind-key C-a send-prefix
 # renumber after deleting
 set-option -g renumber-windows on
 
+# scroll with mouse
+set -g mouse on
+
 # Vi
 setw -g mode-keys vi # enable vi keys.
 ## movement
