--- a/tmux.conf
+++ b/tmux.conf
@@ -1,15 +1,13 @@
-# Prefix
-set -g prefix C-a
-unbind C-b           # Free the original prefix keybinding
-set -s escape-time 0 # don't wait for escape
+set -g prefix C-a                 # Prefix
+unbind C-b                        # Free the original prefix keybinding
+set -s escape-time 0              # don't wait for escape
 bind-key C-Space last-window
 bind-key C-a send-prefix
+set-option -g history-limit 50000
 
-# renumber after deleting
-set-option -g renumber-windows on
+set-option -g renumber-windows on # renumber after deleting
 
-# scroll with mouse
-set -g mouse on
+set -g mouse on                   # scroll with mouse
 
 # Vi
 setw -g mode-keys vi # enable vi keys.
