--- a/tmux.conf
+++ b/tmux.conf
@@ -23,7 +23,7 @@ bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 
 
 # Display
-set -g default-terminal 'xterm-256color-italic'
+set -g default-terminal 'xterm-256color'
 set -g status off           # hide status bar
 set -g base-index 1         # Start window indexing at one instead of zero
 setw -g pane-base-index 1   # Set the base index for panes to 1 instead of 0
