Add tmux url opener

--- a/tmux.conf
+++ b/tmux.conf
@@ -37,3 +37,6 @@ bind r source-file ~/.tmux.conf \; display "Reloaded Tmux."
 # reattach is necessary on OSX because apple is stupid
 # https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard/issues/53
 set-option -g default-command "reattach-to-user-namespace -l bash"
+
+### Addons
+run-shell ~/dotfiles/vendor/tmux-fzf-url/fzf-url.tmux
