Add shell linting and formatting

--- a/vim/coc-settings.json
+++ b/vim/coc-settings.json
@@ -4,8 +4,22 @@
     "css",
     "javascript",
     "javascriptreact",
+    "json",
     "markdown",
+    "sh",
     "typescript",
     "typescriptreact"
-  ]
+  ],
+  "diagnostic-languageserver.filetypes": {
+    "sh": "shellcheck"
+  },
+  "diagnostic-languageserver.formatFiletypes": {
+    "sh": "shfmt"
+  },
+  "diagnostic-languageserver.formatters": {
+    "shfmt": {
+      "command": "shfmt",
+      "args": ["-i", "2", "-ci"]
+    }
+  }
 }
