--- a/tmux.conf
+++ b/tmux.conf
@@ -3,7 +3,7 @@ unbind C-b                        # Free the original prefix keybinding
 set -s escape-time 0              # don't wait for escape
 bind-key C-Space last-window
 bind-key C-a send-prefix
-set-option -g history-limit 50000
+set-option -g history-limit 5000
 
 set-option -g renumber-windows on # renumber after deleting
 
@@ -27,15 +27,21 @@ set -g default-terminal 'xterm-256color'
 set -g status off           # hide status bar
 set -g base-index 1         # Start window indexing at one instead of zero
 setw -g pane-base-index 1   # Set the base index for panes to 1 instead of 0
-source-file ~/.tmux-airline # custom theme
-
+## Status Bar
+set -g status-bg "colour237"
+set -g status-justify "left"
+set -g status-left-length "100"
+set -g status "on"
+set -g status-right-length "100"
+setw -g window-status-separator ""
+set -g status-left "#[fg=colour235,bg=colour246] #S #[fg=colour246,bg=colour237]"
+set -g status-right "#[fg=colour246,bg=colour239] %m-%d %H:%M #[fg=colour235,bg=colour246] #h "
+setw -g window-status-current-format "#[fg=colour246,bg=colour239] #P #[fg=colour246,bg=colour239]#W "
 
 # Reload the file with Prefix r
 bind r source-file ~/.tmux.conf \; display "Reloaded Tmux."
 
-# Hacks
-# reattach is necessary on OSX because apple is stupid
-# https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard/issues/53
+# MacOS Hack: https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard/issues/53
 set-option -g default-command "reattach-to-user-namespace -l bash"
 
 ### Addons
