--- a/tmux.conf
+++ b/tmux.conf
@@ -36,6 +36,7 @@ set -g status-right-length "100"
 setw -g window-status-separator ""
 set -g status-left "#[fg=colour235,bg=colour246] #S #[fg=colour246,bg=colour237]"
 set -g status-right "#[fg=colour246,bg=colour239] %m-%d %H:%M #[fg=colour235,bg=colour246] #h "
+setw -g window-status-format "#[fg=colour246,bg=colour237] #I #[fg=colour246,bg=colour237]#W "
 setw -g window-status-current-format "#[fg=colour246,bg=colour239] #P #[fg=colour246,bg=colour239]#W "
 
 # Reload the file with Prefix r
