--- a/vim/coc-settings.json
+++ b/vim/coc-settings.json
@@ -22,5 +22,7 @@
       "args": ["-i", "2", "-ci"]
     }
   },
-  "tsserver.useLocalTsdk": true
+  "tsserver.useLocalTsdk": true,
+  "suggest.noselect": true,
+  "emmet.triggerExpansionOnTab": true
 }
