--- a/tmux.conf
+++ b/tmux.conf
@@ -18,9 +18,8 @@ bind k select-pane -U
 bind l select-pane -R
 ## selection
 bind-key -T copy-mode-vi v   send-keys -X begin-selection
-bind-key -T copy-mode-vi y   send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+bind-key -T copy-mode-vi y   send-keys -X copy-pipe "reattach-to-user-namespace pbcopy"
 bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
-
 
 # Display
 set -g default-terminal 'xterm-256color'
