vim error underlines and colors

--- a/vim/coc-settings.json
+++ b/vim/coc-settings.json
@@ -1,6 +1,7 @@
 {
   "coc.preferences.extensionUpdateCheck": "never",
   "coc.preferences.formatOnSave": true,
+  "diagnostic.checkCurrentLine": true,
   "diagnostic-languageserver.filetypes": {
     "sh": "shellcheck"
   },
