--- a/tmux.conf
+++ b/tmux.conf
@@ -47,4 +47,4 @@ bind r source-file ~/.tmux.conf \; display "Reloaded Tmux."
 set-option -g default-command "reattach-to-user-namespace -l bash"
 
 ### Addons
-run-shell ~/dotfiles/vendor/tmux-fzf-url/fzf-url.tmux
+run-shell ~/.bin/fzf-url.tmux
